manifests/groups/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* /(metrics|health) {
          deny all;
          return 404;
      }
spec:
  ingressClassName: nginx-internet-facing
  rules:
  - host: app-public.env.lokalise.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 80
